--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: consoRt
 Title: Create CONSORT Diagrams with tikz
-Version: 0.0.0.9013
+Version: 0.0.0.9014
 Authors@R: c( person("Jordan", "Creed", email =
         "Jordan.H.Creed@moffitt.org", role = c("aut")),
         person("Garrick", "Aden-Buie", email =
@@ -17,7 +17,8 @@ Imports:
     magrittr,
     pdftools,
     tinytex,
-    tools
+    tools,
+    whisker
 Suggests: 
     spelling,
     testthat
